lintian-brush (0.110) UNRELEASED; urgency=medium

  * deb-scrub-obsolete: Both the compat-release and the upgrade-release
    now default to oldstable.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 27 Aug 2021 18:00:03 +0100

lintian-brush (0.109) unstable; urgency=medium

  * deb-scrub-obsolete: Don't drop trailing comma's. Closes: #988932
  * Add another old Debian Python email address.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 26 Aug 2021 09:36:27 +0100

lintian-brush (0.108) unstable; urgency=medium

  * Don't correct override targets for javahelper commands. Thanks,
    Perry.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 25 Aug 2021 23:29:06 +0100

lintian-brush (0.107) unstable; urgency=medium

  [ Filippo Giunchedi ]
  * maintainer-also-in-uploaders: Remove uploaders field when empty.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 11 Jul 2021 17:09:54 +0100

lintian-brush (0.106) unstable; urgency=medium

  * Bump required debmutate.
  * Detect gbp-dch use in repositories with subdirectories.
  * Add fixer typo-in-debhelper-override-target.
  * Add missing test dependency on python3-tomlkit. Closes: #989634
  * Add fixer pkg-js-tools-test-is-missing.
  * Add fixer for pypi-homepage.
  * Add fixer for rubygems-homepage.
  * Drop checks for DEB_BUILT_OPTIONS=nocheck when upgrading to
    debhelper 13.
  * Add support for upgrading to Standards-Version 4.5.1.
  * Fix compatibility with Breezy 3.2. Closes: #989633
  * Fix compatibility with newer versions of upstream-ontologist.
    Closes: #988909

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 13 Jun 2021 09:21:23 +0100

lintian-brush (0.104) unstable; urgency=medium

  * Fix parsing of @if-vendor-is-not in lintian lists files. Closes:
    #986111
  * debian-watch-file-uses-old-github-pattern: Also update watch files
    that uses the 'releases' page.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 29 Mar 2021 18:56:27 +0100

lintian-brush (0.102) unstable; urgency=medium
