@@ -2,6 +2,7 @@ lintian-brush (0.110) UNRELEASED; urgency=medium
 
   * deb-scrub-obsolete: Both the compat-release and the upgrade-release
     now default to oldstable.
+  * Also check Pre-Depends for ${misc:Depends}. Closes: #993528
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 27 Aug 2021 18:00:03 +0100
 
